fix maven OutOfMemoryError